[gd_scene load_steps=3 format=3 uid="uid://hn0mb3yq1v52"]

[ext_resource type="Script" uid="uid://co2v321lyge8e" path="res://entities/enemies/misc/boss_zone.gd" id="1_ryeyd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0bfit"]
radius = 200.0

[node name="BossZone" type="Area2D"]
script = ExtResource("1_ryeyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0bfit")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 69.0
offset_bottom = 6.0
grow_horizontal = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
